# ossp

./: README.md  pyproject.toml
ossp/data/: job.py
ossp/models/: model.py  test_model.py
ossp/models/.pytest_cache/v/cache/: lastfailed
