[tool.poetry]
name = "ossp"
version = "0.1.0"
description = "solve open shop scheduling problem using ortools"
authors = ["pshiko <pshiko.sparrow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ortools = "^7.5.7466"
pandas = "^1.0.3"
numpy = "^1.18.2"
matplotlib = "^3.2.1"
cython = "^0.29.16"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
